--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -19,6 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^8.202.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
