--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.1.10",
     "crypto-js": "^4.1.1",
     "cryptojs": "^2.5.3",
+    "json-web-token": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
