--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,9 +22,11 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-svg-inline": "^2.1.1",
     "stripe": "^8.202.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
